--- a/packages/autorest.gotest/test/codeModel/signalR/test-modeler.yaml
+++ b/packages/autorest.gotest/test/codeModel/signalR/test-modeler.yaml
@@ -18040,6 +18040,7 @@ language:
     groupParameters: true
     hasTimeRFC3339: true
     headAsBoolean: true
+    module: github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/t/test
     openApiType: arm
     packageName: test
     parameterGroups:
