--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
@@ -12451,6 +12451,7 @@ language:
     generateTimeRFC3339Helper: true
     groupParameters: true
     headAsBoolean: true
+    module: github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/agrifood/armagrifood
     openApiType: arm
     packageName: armagrifood
     parameterGroups:
