--- a/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/go-tester-pre.yaml
@@ -40230,6 +40230,7 @@ language:
     generateTimeRFC3339Helper: true
     groupParameters: true
     headAsBoolean: true
+    module: github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/appplatform/armappplatform/v2
     openApiType: arm
     packageName: armappplatform
     parameterGroups:
