--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
@@ -22319,6 +22319,7 @@ language:
     groupParameters: true
     headAsBoolean: true
     module: github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/signalr/armsignalr
+    moduleVersion: 0.1.0
     openApiType: arm
     packageName: armsignalr
     parameterGroups:
