--- a/eng/pipelines/ci-go.yml
+++ b/eng/pipelines/ci-go.yml
@@ -2,6 +2,9 @@ trigger:
   branches:
     include:
       - main
+      - feature/*
+      - hotfix/*
+      - release/*
   paths:
     exclude:
       - packages/autorest.gotest
@@ -11,6 +14,9 @@ pr:
   branches:
     include:
       - main
+      - feature/*
+      - hotfix/*
+      - release/*
   paths:
     exclude:
       - packages/autorest.gotest
