--- a/eng/pipelines/ci-gotest.yml
+++ b/eng/pipelines/ci-gotest.yml
@@ -2,6 +2,9 @@ trigger:
   branches:
     include:
       - main
+      - feature/*
+      - hotfix/*
+      - release/*
   paths:
     exclude:
       - packages/autorest.go
@@ -10,6 +13,9 @@ pr:
   branches:
     include:
       - main
+      - feature/*
+      - hotfix/*
+      - release/*
   paths:
     exclude:
       - packages/autorest.go
