Move codegen scripts under the codegen package directory
Cleaned up .npmignore and more importantly exclude the test directory.

--- a/packages/autorest.go/.npmignore
+++ b/packages/autorest.go/.npmignore
@@ -1,20 +1,9 @@
-!dist/**/*
+.rush/
+.scripts/
+.vscode/
 src/
-dist/test/
-package/
-.npmignore
-tsconfig.json
-*.ts
-changelog.md
+test/
 .eslint*
-!*.d.ts
-*.tgz
-.vscode
-.scripts
-attic/
-generated/
-notes.md
-Examples/
-samples/
 *.log
-package-deps.json
+jest.config.js
+tsconfig.json
