--- a/packages/autorest.go/package.json
+++ b/packages/autorest.go/package.json
@@ -43,9 +43,9 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@types/js-yaml": "3.12.1",
-    "@types/node": "17.0.23",
-    "typescript": "~4.4.3",
+    "@types/js-yaml": "~4.0.6",
+    "@types/node": "^18.16.3",
+    "typescript": "~5.1.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
     "@microsoft.azure/autorest.testserver": "3.3.5",
@@ -67,7 +67,7 @@
     "@types/html-to-text": "^5.1.2",
     "@types/showdown": "^1.9.3",
     "html-to-text": "^5.1.1",
-    "js-yaml": "3.13.1",
+    "js-yaml": "~4.1.0",
     "showdown": "^1.9.1",
     "source-map-support": "0.5.13"
   }
