--- a/packages/autorest.gotest/package.json
+++ b/packages/autorest.gotest/package.json
@@ -33,7 +33,7 @@
         "@azure-tools/codegen": "~2.9.2",
         "@types/jest": "~26.0.24",
         "@types/lodash": "^4.14.183",
-        "@types/node": "17.0.23",
+        "@types/node": "^18.16.3",
         "@typescript-eslint/eslint-plugin": "~4.1.1",
         "@typescript-eslint/parser": "~4.1.1",
         "cpy-cli": "~4.1.0",
@@ -44,7 +44,7 @@
         "jest": "~27.0.6",
         "prettier": "^2.2.1",
         "ts-jest": "~27.0.4",
-        "typescript": "~4.4.3"
+        "typescript": "~5.1.3"
     },
     "dependencies": {
         "@autorest/codemodel": "~4.19.3",
@@ -56,7 +56,7 @@
         "autorest": "^3.2.3",
         "cross-env": "^7.0.3",
         "jest-junit": "^12.2.0",
-        "js-yaml": "3.13.1",
+        "js-yaml": "~4.1.0",
         "jsonpath": "^1.1.1",
         "lodash": "^4.17.21",
         "node-yaml": "^3.2.0",
