Add skeleton project for typespec-go
The plugin has the tsp emitter entry point and that's it.
Set up basic CI pipeline to compile and lint typespec-go.
Removed exclulde on swagger directory for autorest.go as it uses it.

--- a/eng/pipelines/ci-go.yml
+++ b/eng/pipelines/ci-go.yml
@@ -8,7 +8,7 @@ trigger:
   paths:
     exclude:
       - packages/autorest.gotest
-      - swagger
+      - packages/typespec-go
 
 pr:
   branches:
@@ -20,7 +20,7 @@ pr:
   paths:
     exclude:
       - packages/autorest.gotest
-      - swagger
+      - packages/typespec-go
 
 jobs:
   - job: "AutoRest_Go_CI"
